--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
     "styled-components": "^6.1.12"
   },
