--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
+    "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
