--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.16.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.12.0",
+    "firebase": "^10.14.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
