--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 
 
 # Firebase env variables
-  NEXT_PUBLIC_PUBLIC_API_KEY: "AIzaSyDDh5YY-Sb5uR1n-A6zyshhMsLLTRBPGYg",
+  NEXT_PUBLIC_API_KEY: "AIzaSyDDh5YY-Sb5uR1n-A6zyshhMsLLTRBPGYg",
   NEXT_PUBLIC_AUTH_DOMAIN: "snippethub-v2-fe4fb.firebaseapp.com",
   NEXT_PUBLIC_PROJECT_ID: "snippethub-v2-fe4fb",
   NEXT_PUBLIC_STORAGE_BUCKET: "snippethub-v2-fe4fb.appspot.com",
