--- a/.env
+++ b/.env
@@ -14,9 +14,9 @@
 
 
 # Firebase env variables
-  NEXT_PUBLIC_API_KEY: "AIzaSyDDh5YY-Sb5uR1n-A6zyshhMsLLTRBPGYg",
-  NEXT_PUBLIC_AUTH_DOMAIN: "snippethub-v2-fe4fb.firebaseapp.com",
-  NEXT_PUBLIC_PROJECT_ID: "snippethub-v2-fe4fb",
-  NEXT_PUBLIC_STORAGE_BUCKET: "snippethub-v2-fe4fb.appspot.com",
-  NEXT_PUBLIC_MESSAGING_SENDER_ID: "366722868642",
+  NEXT_PUBLIC_API_KEY: "AIzaSyDDh5YY-Sb5uR1n-A6zyshhMsLLTRBPGYg"
+  NEXT_PUBLIC_AUTH_DOMAIN: "snippethub-v2-fe4fb.firebaseapp.com"
+  NEXT_PUBLIC_PROJECT_ID: "snippethub-v2-fe4fb"
+  NEXT_PUBLIC_STORAGE_BUCKET: "snippethub-v2-fe4fb.appspot.com"
+  NEXT_PUBLIC_MESSAGING_SENDER_ID: "366722868642"
   NEXT_PUBLIC_APP_ID: "1:366722868642:web:3577201a6ea4f3ed163efb"
