--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
+    "@types/awesome-notifications": "^3.1.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
