--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@mui/material": "^5.16.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.12.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "awesome-notifications": "^3.1.3",
     "firebase": "^10.14.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-spinners": "^0.14.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
